Start issue preview with wrong cards but horizontal scrolling almost

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -44,12 +44,56 @@
 
 .issue {
   padding: 0ch;
+  height: 100%;
 }
 
 .issue .content {
   padding: 2ch;
   padding-bottom: 0.5ch;
 }
+
+.issue-preview {
+  padding-bottom: 3ch;
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(200px, 1fr)); */
+  grid-template-columns: 1fr 2fr;
+  column-gap: 0;
+}
+
+.special {
+  margin-bottom: 2ch;
+}
+
+.preview-articles {
+  padding: 1ch;
+  grid-gap: 1ch;
+  display: grid;
+
+  /* Horizontal scrolling */
+  grid-template-columns: repeat(4, minmax(320px, 1fr));
+  grid-template-rows: auto auto;
+  grid-auto-flow: column;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  /* Vertical */
+  /* grid-template-columns: auto auto;
+  grid-template-rows: repeat(4, minmax(320px, 1fr));
+  grid-auto-flow: row;
+  overflow-x: hidden;
+  overflow-y: scroll; */
+}
+
+.preview-articles .card {
+  height: 100%;
+}
+
+/* .preview-articles .card:hover {
+  transform: none;
+  -webkit-box-shadow: 0 0 5px var(--red), 0 0 5px var(--red), 0 0 5px var(--red) inset;
+  box-shadow: 0 0 10px var(--red) inset;
+} */
 
 /* .card .article .content {
   border-bottom: 1px solid var(--highlight);
